# soraCore

./: Makefile.top  README.txt  cmakeallwin32.sh  configure.sh
irgUtil/: CMakeLists.txt  package.xml
irgUtil/cmake/: config.h.in
irgUtil/doc/: CMakeLists.txt  Doxyfile.in
irgUtil/src/: CMakeLists.txt
irgUtil/src/irgSha1/: CMakeLists.txt  Sha1.cpp  Sha1.h  irgSha1_Export.h  testSha1.cpp
irgUtil/src/irgUtmll/: CMakeLists.txt  LatLonConverter.cpp  LatLonConverter.h  Utmll.cpp  Utmll.h  irgUtmll_Export.h  latLonToUtm.cpp  utmToLatLon.cpp
kn/: CMakeLists.txt  package.xml
kn/cmake/: kn-extras.cmake.develspace.in  kn-extras.cmake.installspace.in  kn.UserOptions.cmake.windows  knConfig.cmake.in
kn/doc/: CMakeLists.txt  Doxyfile.in
kn/src/: CMakeLists.txt
kn/src/knFetchPool/: CMakeLists.txt  CurlFetcher.cpp  CurlFetcher.h  FetchPool.h  FetchPoolParameters.xml  NoopFetcher.cpp  fetchPoolTest.cpp  knFetchPool_Export.h
kn/src/knFrameStore/: CMakeLists.txt  Frame.h  FrameHandle.cpp  FrameHandle.h  FrameStore.cpp  FrameStore.h  FrameStoreSingleton.cpp  FrameStoreSingleton.h  FrameTreeNode.cpp  FrameTreeNode.h  TreeNode.h  knFrameStore_Export.h  treeNodeTest.cpp
kn/src/knGeometry/: CMakeLists.txt  PointCloud.cpp  PointCloud.h  Polygon.cpp  Polygon.h  knGeometry_Export.h  pointCloudTest.cpp
kn/src/knMath/: ATrans.cpp  ATrans.h  CMakeLists.txt  Distance.h  EulerAngles.h  Functions.h  Matrix.h  Plane.cpp  Plane.h  Quaternion.h  RotMat3d.cpp  RotMat3d.h  Vector.h  alignedBoxTest.cpp  transformTest.cpp
kn/src/knMotorShare/: CMakeLists.txt  LocomotorCmd.cpp  LocomotorCmd.h  MotorGroupFuture.cpp  MotorGroupFuture.h  WheelGroupFuture.cpp  WheelGroupFuture.h  WheelGroupState.cpp  WheelGroupState.h  knMotorShare_Export.h  testMWGroupFutureIO.cpp
kn/src/knShare/: Array2DView.cpp  Array2DView.h  CMakeLists.txt  Chrono.h  ConditionVariable.h  FileImageData.cpp  FileImageData.h  Functional.h  Image.cpp  Image.h  ImageData.cpp  ImageData.h  Log.h  LruPool.h  MemImageData.cpp  MemImageData.h  Mutex.h  Repository.h  Singleton.cpp  Singleton.h  SmartPtr.h  StateMachine.cpp  StateMachine.h  StateMachineRepository.cpp  StateMachineRepository.h  Thread.h  Time.cpp  Time.h  array2DPerformance.cpp  array2DTest.cpp  knShare_Export.h  stateMachineTest.cpp
kn/src/knSystemInfo/: BatteryInfo.cpp  BatteryInfo.h  CMakeLists.txt  FilesystemInfo.cpp  MemoryInfo.cpp  MemoryInfo.h  SystemInfo.cpp  SystemInfo.h  SystemInfoParameters.xml  ThermalInfo.cpp  WirelessInfo.h  WirelessInfoFreqRate.cpp  knSystemInfo_Export.h
kn/src/knTiledMap/: CMakeLists.txt  MultiResTile.h  ScrollingMapTile.h  ScrollingTiledMap.h  Tile.h  TileBase.h  TileCache.h  TileFactory.h  TiledMap.h  TiledMapBase.h  knTiledMap_Export.h  multiResMapTest.cpp  scrollingTiledMapTest.cpp  tiledMapTest.cpp
knDds/: CMakeLists.txt  CMakePack.txt  package.xml
knDds/cmake/: config.h.in  knDds-extras.cmake.develspace.in  knDds-extras.cmake.installspace.in  knDds.UserOptions.cmake.windows
knDds/doc/: CMakeLists.txt
knDds/src/: CMakeLists.txt
knDds/src/knDds/: CMakeLists.txt  DdsDataHandler.cpp  DdsDataHandler.h  DdsEntitiesFactory.cpp  DdsEntitiesFactory.h  DdsEntitiesFactorySvc.cpp  DdsEntitiesFactorySvc.h  DdsEntityRepositories.cpp  DdsEntityRepositories.h  DdsEventHandler.cpp  DdsEventHandler.h  DdsEventLoop.cpp  DdsEventLoop.h  DdsPushConsumer.cpp  DdsPushConsumer.h  DdsReaderAccessFunctors.h  DdsSupport.cpp  DdsSupport.h  DdsTypeRegistrator.cpp  DdsTypeRegistrator.h  DdsTypedConnector.h  DdsTypedConsumer.cpp  DdsTypedConsumer.h  DdsTypedSupplier.cpp  DdsTypedSupplier.h  KnDdsParameters.xml  knDds_Export.h
knDds/src/knDdsTools/: CMakeLists.txt
knDds/src/knDdsUtil/: CMakeLists.txt  DdsBuiltInIo.cpp  DdsBuiltInIo.h  GenericBuiltinPrinter_T.cpp  GenericBuiltinPrinter_T.h  GenericPrinter_T.cpp  GenericPrinter_T.h  ddsParticipantPrinter.cpp  ddsPubSubPrinter.cpp  ddsPublicationPrinter.cpp  ddsSubscriptionPrinter.cpp  ddsTopicPrinter.cpp  knDdsUtil_Export.h
knRapid/: CMakeLists.txt  CMakePack.txt  package.xml
knRapid/cmake/: config.h.in  knRapid-extras.cmake.develspace.in  knRapid-extras.cmake.installspace.in  knRapid.UserOptions.cmake.windows
knRapid/doc/: CMakeLists.txt  Doxyfile
knRapid/env-hooks/: 43.knRapid.sh
knRapid/etc/: CMakeLists.txt  EXAMPLE_NDDS_DISCOVERY_PEERS_FILE  NDDS_DISCOVERY_PEERS  RAFT_QOS_PROFILES.xml  RAPID_QOS_PROFILES.xml
knRapid/etc/rtiRoutingService/: CMakeLists.txt  NDDS_DISCOVERY_PEERS  RTI_ROUTING_SERVICE.xml  start-routing-service.bat  start-routing-service.sh
knRapid/examples/: CMakeLists.txt
knRapid/examples/dds/: CMakeLists.txt
knRapid/examples/poseProvider/: CMakeLists.txt  poseProvider.cpp
knRapid/src/: CMakeLists.txt
knRapid/src/knFetchPool/: CMakeLists.txt  CurlFetcher.cpp  FetchPool.h  fetchPoolTest.cpp
knRapid/src/knFrameStoreSvc/: CMakeLists.txt  Centaur2Frames.xml  Centaur2UpdaterConfig.xml  FieldTestSiteFrames.xml  FrameStoreConfigSvc.cpp  FrameStoreConfigSvc.h  FrameStoreParameters.xml  FrameStoreUpdaterSvc.cpp  FrameStoreUpdaterSvc.h  K10BlackFrames.xml  K10BlackFrames_Feb-2010.xml  K10BlackUpdaterConfig.xml  K10MiniFrames.xml  K10RedFrames.xml  K10RedUpdaterConfig.xml  K11Frames.xml  KRex2Frames.xml  KRex2UpdaterConfig.xml  KRexFrames.xml  KRexUpdaterConfig.xml  LerAFrames.xml  LerBFrames.xml  LerBFramesCorrected.xml  LerFrames.xml  MarscapeFrames.xml  Mvp2014Frames.xml  RoverscapeFrames.xml  frameStoreRegressions.README  frameStoreRegressions.cpp  frameStoreRegressions.txt  knFrameStoreSvc_Export.h  testFrameStore.cpp  testFrameStoreConfigPublisher.cpp
knRapid/src/knProcessManager/: CMakeLists.txt  PipeHandler.cpp  PipeHandler.h  ProcMgrImpl.cpp  ProcMgrImpl.h  ProcMgrSubsysImpl.cpp  ProcMgrSubsysImpl.h  ProcessData.cpp  ProcessData.h  ProcessManagerHelper.cpp  ProcessManagerHelper.h  ProcessManagerParameters.xml  ProcessManagerSvc.cpp  ProcessManagerSvc.h  knProcessManager_Export.h  rctlCfgTest.xml  rctld.cpp
knRapid/src/knRaft/: CMakeLists.txt  DataPriorityController.cpp  DataPriorityController.h  FileAnnouncer.cpp  FileAnnouncer.h  FileQueue.cpp  FileQueue.h  (+14 more)
(+568 files in other folders)
