<?xml version="1.0"?>
<package>
  <name>irgUtil</name>
  <version>1.0.0</version>
  <description>Utility Classes from the Intelligent Robotics Group</description>
  <maintainer email="mark.b.allan@nasa.gov">Mark Allan</maintainer>

  <license>Apache2</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>irg_cmake</build_depend>
</package>