<?xml version="1.0"?>
<package>
  <name>knRapid</name>
  <version>1.0.0</version>
  <description>Rapid Implementation of soraCore</description>
  <maintainer email="hans.utz@nasa.gov">Hans Utz</maintainer>

  <license>Apache2</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>irg_cmake</build_depend>
  <build_depend>irgUtil</build_depend>
  <build_depend>kn</build_depend>
  <build_depend>knDds</build_depend>
  <build_depend>Miro</build_depend>
</package>
