<?xml version="1.0"?>

<!-- http://www.ros.org/reps/rep-0134.html -->

<package format="2">
  <name>knRapid</name>
  <version>0.0.0</version>
  <description>soraCore RAPID implementation</description>
  <maintainer email="Mark.B.Allan@nasa.gov">Mark Allan</maintainer>

  <license>NOSA</license>

  <buildtool_depend>catkin</buildtool_depend>
  <export>
    <build_type>cmake</build_type>
  </export>
  
  
  <build_depend>irg_cmake</build_depend>

  <depend>irgUtil</depend>
  <depend>kn</depend>
  <depend>knDds</depend>
  <depend>Miro</depend>
  
  <depend>libeigen3-dev</depend>
  
  <depend>libace-dev</depend>

  <depend>libboost-bind-dev</depend>
  <depend>libboost-chrono-dev</depend>
  <depend>libboost-filesystem-dev</depend>
  <depend>libboost-function-dev</depend>
  <depend>libboost-program-options-dev</depend>
  <depend>libboost-signals-dev</depend>
  <depend>libboost-system-dev</depend>
  
  <depend>libcurl3</depend>


</package>
